# otus_cpp_15

./: .travis.yml  CMakeLists.txt  README.md  kkmeans_ex.cpp  kkmeans_ex_starsky.txt
